--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <h3>Join Our Community</h3>
                             <p>Connect with millions of MLBB players worldwide and share your strategies!</p>
                             <div class="community-links">
-                                <a href="#" class="community-link">
+                                <a href="https://www.facebook.com/groups/mlbbnepal" class="community-link">
                                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/>
                                     </svg>
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 MLBB Heroes Database. Not affiliated with Moonton. All game content and assets are property of Moonton.</p>
+                <p>&copy; 2026 MLBB Heroes Database. Not affiliated with Moonton. All game content and assets are property of Moonton.</p>
             </div>
         </div>
     </footer>
